docs: :construction: Desarrollo de components
Creacion de componentes con web components y realizacion de formulario, falta funcionalidad

by: Jhon Hernandez

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
 </head>
 <body>
-    
+    <my-header></my-header>
+    <h1 style="text-align: center; padding: 10px 0px;">Bill details</h1>
+    <my-body></my-body>
 </body>
 </html>
