--- a/index.html
+++ b/index.html
@@ -12,10 +12,19 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
 </head>
 <body>
-    <my-header></my-header>
-    <h1 style="text-align: center; padding: 10px 0px;">Bill details</h1>
-    <my-body></my-body>
+    <!-- Particles -->
+
+    <!-- --------- -->
+    <div class="contenedorGeneral d-flex flex-column justify-content-center align-content-center align-items-center w-100">
+        <my-header></my-header>
+        <h1>BILL DETAILS</h1>
+        <my-body></my-body>
+    </div>
 </body>
 </html>
