feat: :memo: HUNTERS BILLING SYSTEM
Se le agrega funcionalidad a los botones de agregar y quitar cantidad de productos

by: Jhon Hernandez

--- a/index.html
+++ b/index.html
@@ -21,10 +21,16 @@
     <!-- Particles -->
 
     <!-- --------- -->
-    <div class="contenedorGeneral d-flex flex-column justify-content-center align-content-center align-items-center w-100">
+    <div class="contenedorGeneral d-block flex-column align-items-center w-100">
         <my-header></my-header>
         <h1>BILL DETAILS</h1>
         <my-body></my-body>
+
+        <div class="botonesAddEnd">
+            <button class="bg-success rounded-1 py-1" id="finalizePurchase">FINALIZE PURCHASE</button>
+            <button class="bg-danger rounded-1 py-1" id="addInvoice">ADD INVOICE (+)</button>
+        </div>
+        
     </div>
 </body>
 </html>
