--- a/index.html
+++ b/index.html
@@ -7,30 +7,43 @@
     <title>Facturación Hunters</title>
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/particles.css">
 
     <script src="js/main.js" type="module" defer></script>
+    <script src="js/particles.js" defer></script>
+
+    <!-- Bootstrap 5 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
+    <!-- ----------- -->
 
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
+    <!-- ------------ -->
+
+<!--     <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+ -->
 </head>
 <body>
     <!-- Particles -->
-
     <!-- --------- -->
-    <div class="contenedorGeneral d-block flex-column align-items-center w-100">
-        <my-header></my-header>
-        <h1>BILL DETAILS</h1>
-        <my-body></my-body>
+    <div class=" d-block flex-column align-items-center w-100">
+        <div id="particles-js">
+            <my-header></my-header>
+            <h1>BILL DETAILS</h1>
+            <my-body></my-body>
 
-        <div class="botonesAddEnd">
-            <button class="bg-success rounded-1 py-1" id="finalizePurchase">FINALIZE PURCHASE</button>
-            <button class="bg-danger rounded-1 py-1" id="addInvoice">ADD INVOICE (+)</button>
-        </div>
-        
+            <div class="botonesAddEnd d-flex flex-column d-sm-flex flex-sm-row">
+                <button class="bgFinalize py-1 col-8 col-sm-3 mb-4" id="finalizePurchase">FINALIZE PURCHASE</button>
+                <button class="bgShow py-1 col-8 col-sm-3 mb-4" id="showInvoice">SHOW INVOICE</button>
+                <button class="bgAdd py-1 col-8 col-sm-3 mb-4" id="addInvoice">ADD INVOICE (+)</button>
+            </div>
+            <canvas class="particles-js-canvas-el"></canvas>
+        </div>        
     </div>
+
 </body>
 </html>
