fix(Bug Sistema de Facturacion): :bug: Bug Sistema de facturacion
Corregir el bug al momento de guardar los formularios :)

by: Jhon Hernandez

--- a/index.html
+++ b/index.html
@@ -24,23 +24,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
     <!-- ------------ -->
 
-<!--     <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
- -->
+    <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+
 </head>
 <body>
     <!-- Particles -->
     <!-- --------- -->
     <div class=" d-block flex-column align-items-center w-100">
-        <div id="particles-js">
+        <div id="particles-js" class="particles">
             <my-header></my-header>
             <h1>BILL DETAILS</h1>
             <my-body></my-body>
-
-            <div class="botonesAddEnd d-flex flex-column d-sm-flex flex-sm-row">
-                <button class="bgFinalize py-1 col-8 col-sm-3 mb-4" id="finalizePurchase">FINALIZE PURCHASE</button>
-                <button class="bgShow py-1 col-8 col-sm-3 mb-4" id="showInvoice">SHOW INVOICE</button>
-                <button class="bgAdd py-1 col-8 col-sm-3 mb-4" id="addInvoice">ADD INVOICE (+)</button>
-            </div>
             <canvas class="particles-js-canvas-el"></canvas>
         </div>        
     </div>
