docs: :memo: Sistema Facturacion
Se cambia logica al momento de enviar los datos al php - se cambia en my-body.js

by: Jhon Hernandez

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             <h1>BILL DETAILS</h1>
             <my-body></my-body>
             <canvas class="particles-js-canvas-el"></canvas>
-        </div>        
+        </div>      
+        <pre></pre>  
     </div>
 
 </body>
