docs: :memo: Post and Get client
Se realiza la funcion de post and get del apartado de cliente, terminar el resto de apartados y hacer diseño :)

by: Jhon Hernandez

--- a/index.html
+++ b/index.html
@@ -28,19 +28,20 @@
 
 </head>
 <body>
-    <!-- Particles -->
-    <!-- --------- -->
-    <div class=" d-block flex-column align-items-center w-100">
+    <div class="contenedor-General d-block flex-column align-items-center">
+        <!-- Particles -->
         <div id="particles-js" class="particles">
+        <!-- --------- -->
             <my-header></my-header>
             <h1>BILL DETAILS</h1>
             <my-body></my-body>
             <canvas class="particles-js-canvas-el"></canvas>
         </div>      
-        <pre></pre>  
     </div>
 
-    <img src="img/Diagrama.png" alt="">
+    <div class="diagram">
+        <img src="img/Diagrama.png" alt="">
+    </div>
 
 </body>
 </html>
